scrollbar padding fix

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ hr {
     width: 365px; height: 240px;
     margin-left: 50px;
     border: none;
-    padding: 20px; padding-top: 0px; padding-right: 130px;
+    padding: 20px; padding-top: 0px; padding-right: 120px;
     color: black;
     font-family: "atlas typewriter";
     font-weight: 200px;
